--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@expo-google-fonts/inter": "^0.2.3",
     "@expo/config-plugins": "~9.0.0",
     "@expo/html-elements": "^0.4.2",
-    "@expo/metro-runtime": "~4.0.0",
+    "@expo/metro-runtime": "~4.0.1",
     "@gluestack-ui/accordion": "^1.0.8",
     "@gluestack-ui/actionsheet": "^0.2.46",
     "@gluestack-ui/alert": "^0.1.16",
@@ -44,18 +44,18 @@
     "@gluestack-ui/tooltip": "^0.1.36-alpha.0",
     "@legendapp/motion": "^2.4.0",
     "babel-plugin-module-resolver": "^5.0.2",
-    "expo": "52.0.11",
-    "expo-linking": "~7.0.3",
-    "expo-status-bar": "~2.0.0",
-    "expo-updates": "~0.26.9",
+    "expo": "~52.0.46",
+    "expo-linking": "~7.0.5",
+    "expo-status-bar": "~2.0.1",
+    "expo-updates": "~0.27.4",
     "lucide-react-native": "^0.445.0",
     "nativewind": "^4.1.23",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.3",
+    "react-native": "0.76.9",
     "react-native-reanimated": "~3.16.1",
-    "react-native-safe-area-context": "^4.14.0",
-    "react-native-svg": "15.2.0",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "serve": "^14.2.2",
     "tailwindcss": "^3.4.15"
