--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "@babel/core": "^7.20.0",
     "@types/react": "~18.3.12",
     "jscodeshift": "^0.15.2",
-    "typescript": "~5.3.3"
+    "typescript": "~5.3.3",
+    "expo-dev-client": "~5.0.20"
   },
   "private": true
 }
