--- a/app.json
+++ b/app.json
@@ -17,14 +17,18 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.gluestack.remi-ai-v3"
+      "bundleIdentifier": "com.gtm94.remi-ai-v3",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.gtm94.remi-ai-v3"
+      "package": "com.gtm94.remi-ai-v3",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png",
